--- a/app/views/shared/_billing_banner.html.erb
+++ b/app/views/shared/_billing_banner.html.erb
@@ -1,7 +1,14 @@
 <% if defined?(current_user) && current_user && current_user.account %>
   <% account = current_user.account %>
   <% suppress_once = session[:suppress_billing_banner] == true %>
-  <% needs_subscription = !account.on_trial? && !account.active_subscription? && !suppress_once %>
+  <% 
+    # Valid plans that don't need trial/subscription warnings
+    valid_plans = ['free', 'team', 'business']
+    has_chosen_plan = valid_plans.include?(account.current_plan.to_s.downcase)
+    
+    # Show banner only if: trial ended, no subscription, hasn't chosen a plan
+    needs_subscription = !account.on_trial? && !account.active_subscription? && !has_chosen_plan && !suppress_once
+  %>
   <% if needs_subscription %>
     <div class="bg-yellow-50 border-l-4 border-yellow-400 p-4 mx-6 mt-4 rounded">
       <div class="flex items-start justify-between">
