--- a/app/views/pricing/show.html.erb
+++ b/app/views/pricing/show.html.erb
@@ -181,8 +181,20 @@
       <!-- Status Message -->
       <div class="mt-6 text-center">
         <% if @account.resources_with_warnings.any? %>
-          <% @account.resources_with_warnings.each do |warning| %>
-            <div class="inline-flex items-center px-4 py-2 rounded-full <%= warning[:level] == :exceeded ? 'bg-red-100 text-red-800' : warning[:level] == :danger ? 'bg-orange-100 text-orange-800' : 'bg-yellow-100 text-yellow-800' %> text-sm font-medium mx-2 mb-2">
+          <% exceeded_resources = @account.resources_with_warnings.select { |w| w[:level] == :exceeded } %>
+          <% if exceeded_resources.any? %>
+            <div class="inline-flex items-center px-4 py-2 rounded-full bg-red-100 text-red-800 text-sm font-medium mb-2">
+              <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20">
+                <path fill-rule="evenodd" d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z" clip-rule="evenodd"/>
+              </svg>
+              <% resource_names = exceeded_resources.map { |r| r[:name] }.join(", ") %>
+              <%= resource_names %>: <%= exceeded_resources.first[:percentage].round %>% used - Update subscription below
+            </div>
+          <% end %>
+
+          <% warning_resources = @account.resources_with_warnings.select { |w| w[:level] != :exceeded } %>
+          <% warning_resources.each do |warning| %>
+            <div class="inline-flex items-center px-4 py-2 rounded-full <%= warning[:level] == :danger ? 'bg-orange-100 text-orange-800' : 'bg-yellow-100 text-yellow-800' %> text-sm font-medium mx-2 mb-2">
               <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20">
                 <path fill-rule="evenodd" d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z" clip-rule="evenodd"/>
               </svg>
