--- a/app/views/shared/_quota_warning_banner.html.erb
+++ b/app/views/shared/_quota_warning_banner.html.erb
@@ -51,7 +51,7 @@
           </div>
         </div>
         <div class="ml-3 flex-shrink-0">
-          <%= link_to "Upgrade", pricing_path, class: "inline-flex items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md text-white #{button_colors[warning[:level]]} focus:outline-none focus:ring-2 focus:ring-offset-2" %>
+          <%= link_to "Upgrade", plan_path, class: "inline-flex items-center px-3 py-2 border border-transparent text-sm leading-4 font-medium rounded-md text-white #{button_colors[warning[:level]]} focus:outline-none focus:ring-2 focus:ring-offset-2" %>
         </div>
       </div>
     </div>
